--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo --configDir=cardano-learn-site --minify
+        run: cd cardano-learn-site && hugo --minify
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
